# leptos

./: .gitignore  .justfile  Cargo.toml  README.md  index.html  tailwind.config.js
.codesandbox/: Dockerfile  tasks.json
public/: styles.css
src/: lib.rs  main.rs
src/components/: navbar.rs
src/pages/: health.rs  home.rs  mod.rs
