[package]
name = "permesi"
version = "0.1.0"
edition = "2021"
authors = ["Team Permesi <team@permesi.dev>"]
description = "Frontend for Permesi"
build = "build.rs"

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1"
console_log = "1"
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
log = "0.4"
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"

[build-dependencies]
anyhow = "1"
vergen = { version = "8.3", features = ["build", "git", "gitcl"] }
